# rlvr_pipeline

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  COMPONENT_GUIDE.md  CONFIGURATION_GUIDE.md  QUICK_START.md  README.md  inference.py  main.py  pyproject.toml  run_pipeline.py  train_gsm8k.py
.cursor/rules/: black-format.mdc  rlvr-pipeline-rules.mdc
.cursor/rules/core-rules/: agentic-behavior-control-always.mdc
conf/: config.yaml
conf/data_component/: default.yaml
conf/evaluation_component/: default.yaml
conf/model_component/: default.yaml
conf/prompts/: default.yaml  financial_reasoning.yaml  math_reasoning.yaml
conf/reward_component/: default.yaml
conf/reward_component/tasks/: financial_reasoning.yaml  math_reasoning.yaml
conf/training_loop_component/: default.yaml
infrastructure/: README.md
infrastructure/hooks/: pre-commit-hook.sh
infrastructure/nebius/cluster/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infrastructure/nebius/cluster/scripts/: cloud-init.tftpl
infrastructure/nebius/single_gpu/: main.tf  providers.tf  terraform.tf  terraform.tfvars.example  variables.tf
infrastructure/nebius/single_gpu/scripts/: cloud-init.tftpl
src/: __init__.py  config.py  data.py  evaluation.py  gsm8k.py  inference.py  model.py  rewards.py  train.py
src/components/: __init__.py  base_component.py
src/components/data/: __init__.py  default_data_component.py  interface.py
src/components/evaluation/: default_evaluation_component.py  interface.py
src/components/model/: __init__.py  default_model_component.py  interface.py
src/components/observers/: __init__.py  interface.py  wandb_observer.py
src/components/reward/: __init__.py  default_reward_component.py  interface.py
src/components/training_loop/: __init__.py  default_training_loop.py  interface.py
src/orchestration/: __init__.py  pipeline_orchestrator.py
src/utils/: custom_hydra_resolvers.py
tools/: finqa_dataset_analysis.ipynb
