[tool.poetry]
name = "py-code-style-template"
version = "0.1.0"
description = "Python code style template"
authors = ["Erfan Miahi <mhi.erfan1@gmail.com>"]
packages = [
    { include = "src" }
]


[tool.poetry.dependencies]
python = ">=3.10, <3.13"
unsloth = ">=2025.4.7"
vllm = "0.8.1"
jupyter = "*"
transformers = ">=4.51.3"
wandb = "*"
datasets = ">=3.0.0"
evaluate = "*"
hydra-core = "1.3.2"
torch = "^2.6.0"
tensorboard = "^2.19.0"
omegaconf = "^2.3.0"
nvtx = "^0.2.11"
pyyaml = "^6.0.2"
jinja2 = "^3.1.6"
trl = ">=0.15.0"
accelerate = ">=1.0.0"
jsonlines = ">=4.0.0"

[tool.black]
line-length = 79
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/foo.py  # exclude a file named foo.py in the root of the project
unsloth_compiled_cache
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79
known_first_party = ["src"]
known_third_party = ["wandb", "torch", "transformers", "trl"]

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^25.1.0"}
flake8 = "^7.1.1"
flake8-docstrings = "^1.7.0"
flake8-import-order = "^0.18.2"
flake8-quotes = "^3.4.0"
isort = "^5.13.2"
pre-commit = "^4.2.0"
mypy = "^1.14.1"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "unsloth_compiled_cache"
]
